Changes with mod_fastcgi 2.2.1

 *) Added a FastCGI Authorizer Role compatibility mode which implements the 
    specification to the tee.  Use -compat arg with any of the Auth server
    directives.  This is intended for new and existing FastCGI authorizer
    applications that require compatibility with other server implementations.
    
 *) Fix logging from the process manager.  Previously, all calls to the 
    logging routines used NULL for the server_rec.  This works fine in a dev
    environment, but results in most of these messages being tossed by
    log_error_core() because DEFAULT_LOGLEVEL is too low.  Odd logic.
        
 *) Always setup fr->header so that in the event the FastCGI server
    doesn't get a valid FastCGI protocol header over the wire, we
    can still print our error message to the log from do_work().

 *) Fix an obvious copy-n-paste error in open_connection_to_fs() 
    if TCP_NODELAY was defined (Don Locrasto [locrasto@iceminer.com]).

Changes with mod_fastcgi 2.2.0

 *) Serious rewrite of mod_fastcgi.html.  An example conf will have
    to wait until another time - I'm burned out on docs updates.

 *) Add to the mod_fastcgi to the server version string.

 *) SCO doesn't like the const in the arg to inet_addr() and
    gethostbyname().

 *) Use Apache's NET_SIZE_T to get the correct arg type for getsockopt().

 *) Deleted redundant header files from fcgi.h.

 *) Full path names are no longer required for directives which take
    file names as arguments.  Like other Apache directives you can
    specify paths from server_root (don't start with a "/").

 *) The fcgiKillMgr is gone.  This intermediate process sat between
    the Apache parent and the FastCGI Process Manager under Apache
    1.2.	 The process manager tries to name itself fcgi_pm (it used
    to be fcgiProcMgr).

 *) Authentication, Authorization, and Access phases are now
    supported. I've bent the FastCgi spec a bit: as many of the standard