@@ -1,11 +1,11 @@
 /*
- * $Id: mod_fastcgi.h,v 1.9 1999/02/17 04:28:34 roy Exp $
+ * $Id: mod_fastcgi.h,v 1.10 1999/02/24 04:42:38 roberts Exp $
  */
 
 #ifndef MOD_FASTCGI_H
 #define MOD_FASTCGI_H
 
-#define MOD_FASTCGI_VERSION "2.2.0"
+#define MOD_FASTCGI_VERSION "2.2.1"
 
 #define FCGI_DEFAULT_LISTEN_Q 5            /* listen queue size */
 #define FCGI_DEFAULT_RESTART_DELAY 5       /* delay between restarts */
@@ -119,6 +119,7 @@
 /* This is (more or less) from http_main.c. It should be in an Apache header */
 #ifndef SYS_SIGLIST
 #define SYS_SIGLIST ap_sys_siglist
+extern const char *ap_sys_siglist[]; 
 #endif
 
 #endif	/* MOD_FASTCGI_H */
